--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-pagebuilder": "^0.1.4",
     "gulp-sass": "^4.0.2"
   }
 }
